# Sunset-Sunrise-Api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  config.py  gunicorn.conf.py  pyproject.toml  requirements.txt
src/: main.py
src/app/: routing.py  server.py
src/app/resources/: sunset_sunrise.py
src/interfaces/: default_response.py  sunset_sunrise.py
tests/: test_api.py
